tests/parser/bad/cmodule-field-id-colon-with.scilla
scilla_version 0

library TestLib

contract Test
()

(* invalid type *)
field truth : bool = True
